--- a/src/components/main navbar/index.scss
+++ b/src/components/main navbar/index.scss
@@ -1,23 +1,23 @@
-.logo {
-  text-align: center;
-  align-items: center;
-}
-
 .navbar-menu {
   height: 30px;
   display: flex;
-  justify-content: right;
   margin-top: 10px;
   margin-bottom: 10px;
   background-color: rgb(123, 134, 228);
-  // float: right;
+  list-style: none;
+  list-style-type: none;
+  text-decoration: none;
 }
 
-
-@media only screen and (max-width:320px) {
+@media only screen and (max-width:375px) {
   .logo {
     text-align: center;
     align-items: center;
+  }
+
+
+  .main-menu {
+    display: none !important;
   }
 
   .mainlogo {
@@ -31,29 +31,143 @@
   }
 
   .navbar-menu {
-    overflow: hidden;
     height: 30px;
     justify-content: right;
     margin-top: 10px;
     margin-bottom: 10px;
     background-color: rgb(123, 134, 228);
-  } 
-  
-  .menubtn {
-    width: 65px;
-    height: 25px;
-    background-color: rgba(74, 66, 124, 0.89);
-    color: rgba(255, 255, 255, 0.897);
-    font-family: 'Courier New', Courier, monospace;
-    border-radius: 15px;
-    float: right;
   }
+
+  .menubtn {
+    transform: translateX(275px);
+    width: 70px;
+    height: 30px;
+    font-size: 1rem;
+    font-weight: 400;
+    background-color: black;
+    color: white;
+    font-family: 'Courier New';
+    border-radius: 5px;
+  }
+
 
 }
 
-@media only screen and (min-width:1440px) {
-  .mainlogo{
+@media only screen and (max-width:576px) {
+  .logo {
+    text-align: center;
+    align-items: center;
+  }
+
+
+  .main-menu {
+    display: none !important;
+  }
+
+  .mainlogo {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    width: 300px;
+  }
+
+  .address {
+    display: none;
+  }
+
+  .navbar-menu {
+    height: 30px;
+    // display: flex;
+    // justify-content: right;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    background-color: rgb(123, 134, 228);
+  }
+
+  .menubtn {
+    width: 70px;
+    height: 30px;
+    font-size: 1rem;
+    font-weight: 400;
+    background-color: black;
+    color: white;
+    font-family: 'Courier New';
+    border-radius: 5px;
+  }
+
+  .xs-menu {
+    display: flex;
+    justify-content: right;
+    align-items: right;
+    float: right;
+  }
+}
+
+@media only screen and (min-width:992px) {
+  .logo {
+    text-align: center;
+    align-items: center;
+  }
+
+  .mainlogo {
+    margin-top: 10px;
     width: 400px;
     height: 75px;
+  }
+
+  .main-menu {
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .menu-item {
+    margin-right: 30px;
+  }
+
+  .address {
+    color: black;
+    text-align: right;
+  }
+
+  .menubtn {
+    display: none;
+  }
+
+  .xs-menu {
+    display: none;
+  }
+}
+
+@media only screen and (min-width:1440px) {
+  .logo {
+    text-align: center;
+    align-items: center;
+  }
+
+  .mainlogo {
+    margin-top: 10px;
+    width: 500px;
+    height: 100px;
+  }
+
+  .main-menu {
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .menu-item {
+    margin-right: 30px;
+  }
+
+  .address {
+    color: black;
+    text-align: right;
+  }
+
+  .menubtn {
+    display: none;
+  }
+
+  .xs-menu {
+    display: none;
   }
 }
