--- a/src/components/main navbar/index.scss
+++ b/src/components/main navbar/index.scss
@@ -14,8 +14,7 @@
     text-align: center;
     align-items: center;
   }
-
-
+  
   .main-menu {
     display: none !important;
   }
@@ -38,8 +37,12 @@
     background-color: rgb(123, 134, 228);
   }
 
+  .xs-menu{
+    position: absolute;
+    left: calc(70%);
+  }
+
   .menubtn {
-    transform: translateX(275px);
     width: 70px;
     height: 30px;
     font-size: 1rem;
@@ -53,13 +56,15 @@
 
 }
 
-@media only screen and (max-width:576px) {
+
+
+
+@media only screen and (max-width:575px) {
   .logo {
     text-align: center;
     align-items: center;
   }
-
-
+  
   .main-menu {
     display: none !important;
   }
@@ -76,11 +81,15 @@
 
   .navbar-menu {
     height: 30px;
-    // display: flex;
-    // justify-content: right;
+    justify-content: right;
     margin-top: 10px;
     margin-bottom: 10px;
     background-color: rgb(123, 134, 228);
+  }
+
+  .xs-menu{
+    position: absolute;
+    left: calc(80%);
   }
 
   .menubtn {
@@ -94,12 +103,46 @@
     border-radius: 5px;
   }
 
-  .xs-menu {
-    display: flex;
-    justify-content: right;
-    align-items: right;
-    float: right;
+
+}
+
+@media only screen and (min-width:576px) {
+  .logo {
+    text-align: center;
+    align-items: center;
   }
+  
+  .main-menu {
+    display: flex;
+    justify-content: space-around;
+    margin-left: 30px;
+  }
+
+  .mainlogo {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    width: 300px;
+  }
+
+
+  .menu-item {
+    margin-right: 30px;
+  }
+
+
+  .navbar-menu {
+    height: 30px;
+    // display: flex;
+    // justify-content: right;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    background-color: rgb(123, 134, 228);
+  }
+
+  .menubtn {
+    display: none;
+  }
+
 }
 
 @media only screen and (min-width:992px) {
@@ -117,15 +160,19 @@
   .main-menu {
     display: flex;
     justify-content: space-around;
+    margin-left: 60px;
   }
 
+  
+
   .menu-item {
-    margin-right: 30px;
+    margin-right: 60px;
   }
 
   .address {
     color: black;
     text-align: right;
+    margin-right: 30px;
   }
 
   .menubtn {
