--- a/src/components/main navbar/index.scss
+++ b/src/components/main navbar/index.scss
@@ -1,20 +1,9 @@
-.navbar-menu {
-  height: 30px;
-  display: flex;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  background-color: rgb(123, 134, 228);
-  list-style: none;
-  list-style-type: none;
-  text-decoration: none;
-}
-
 @media only screen and (max-width:375px) {
   .logo {
     text-align: center;
     align-items: center;
   }
-  
+
   .main-menu {
     display: none !important;
   }
@@ -26,7 +15,7 @@
   }
 
   .address {
-    display: none;
+    display: none !important;
   }
 
   .navbar-menu {
@@ -34,20 +23,18 @@
     justify-content: right;
     margin-top: 10px;
     margin-bottom: 10px;
-    background-color: rgb(123, 134, 228);
+    background-color:#003082;
   }
 
-  .xs-menu{
-    position: absolute;
-    left: calc(70%);
-  }
 
   .menubtn {
+    position: absolute;
+    left: calc(75%);
     width: 70px;
     height: 30px;
     font-size: 1rem;
     font-weight: 400;
-    background-color: black;
+    background-color:black;
     color: white;
     font-family: 'Courier New';
     border-radius: 5px;
@@ -64,41 +51,39 @@
     text-align: center;
     align-items: center;
   }
-  
+
   .main-menu {
     display: none !important;
   }
 
   .mainlogo {
     margin-top: 10px;
-    margin-bottom: 10px;
     width: 300px;
   }
 
   .address {
-    display: none;
+    display: none !important;
   }
 
   .navbar-menu {
+    width: 100%;
     height: 30px;
     justify-content: right;
     margin-top: 10px;
     margin-bottom: 10px;
-    background-color: rgb(123, 134, 228);
+    background-color: #003082;
   }
 
-  .xs-menu{
-    position: absolute;
-    left: calc(80%);
-  }
 
   .menubtn {
+    position: absolute;
+    left: calc(80%);
     width: 70px;
     height: 30px;
     font-size: 1rem;
     font-weight: 400;
-    background-color: black;
-    color: white;
+    background-color: black !important;
+    color: white !important;
     font-family: 'Courier New';
     border-radius: 5px;
   }
@@ -111,16 +96,22 @@
     text-align: center;
     align-items: center;
   }
-  
+
   .main-menu {
     display: flex;
-    justify-content: space-around;
-    margin-left: 30px;
+  }
+
+  .address {
+    line-height: 35px;
+    font-size: 1.1rem;
+    color: black;
+    margin-right: 30px;
+    font-weight: 700;
+    text-align: right;
   }
 
   .mainlogo {
     margin-top: 10px;
-    margin-bottom: 10px;
     width: 300px;
   }
 
@@ -131,16 +122,59 @@
 
 
   .navbar-menu {
-    height: 30px;
-    // display: flex;
-    // justify-content: right;
+    line-height: 40px;
+    height: 45px;
+    display: flex;
+    background-color:#003082;
+  }
+
+  .xs-menu {
+    display: none !important;
+  }
+
+}
+
+@media only screen and (min-width:768px) {
+  .logo {
+    text-align: center;
+    align-items: center;
+  }
+
+  .main-menu {
+    display: flex;
+  }
+
+  .address {
+    line-height: 35px;
+    font-size: 0.9rem;
+    color: black;
+    margin-right: 30px;
+    font-weight: 700;
+  }
+
+  .mainlogo {
     margin-top: 10px;
-    margin-bottom: 10px;
-    background-color: rgb(123, 134, 228);
+    width: 300px !important;
+    height: 60px !important;
+  }
+
+
+  .menu-item {
+    margin-right: 10px;
+    font-size: 0.8rem;
+  }
+
+
+  .navbar-menu {
+    width: 100%;
+    line-height: 40px;
+    height: 45px;
+    display: flex;
+    background-color:#003082;
   }
 
   .menubtn {
-    display: none;
+    display: none !important;
   }
 
 }
@@ -153,26 +187,31 @@
 
   .mainlogo {
     margin-top: 10px;
-    width: 400px;
-    height: 75px;
+    width: 500px !important;
+    height: 100px !important;
   }
 
-  .main-menu {
+
+  .navbar-menu {
+    width: 100%;
+    line-height: 40px;
+    height: 45px;
     display: flex;
-    justify-content: space-around;
-    margin-left: 60px;
+    background-color: #003082;
   }
-
-  
 
   .menu-item {
-    margin-right: 60px;
+    margin-right: 15px;
+    margin-left: 15px;
   }
 
   .address {
+    text-align: right !important;
+    line-height: 35px;
+    font-size: 1.1rem;
     color: black;
-    text-align: right;
     margin-right: 30px;
+    font-weight: 700;
   }
 
   .menubtn {
@@ -196,25 +235,32 @@
     height: 100px;
   }
 
-  .main-menu {
-    display: flex;
-    justify-content: space-around;
-  }
 
   .menu-item {
-    margin-right: 30px;
+    margin-right: 15px;
+    margin-left: 15px;
   }
 
   .address {
+    line-height: 40px;
+    font-size: 1.1rem;
     color: black;
-    text-align: right;
+    margin-right: 30px;
+  }
+
+  .navbar-menu {
+    width: 100%;
+    line-height: 40px;
+    height: 45px;
+    display: flex;
+    background-color: #003082;
   }
 
   .menubtn {
-    display: none;
+    display: none !important;
   }
 
   .xs-menu {
-    display: none;
+    display: none !important;
   }
 }
