--- a/src/components/product card/index.scss
+++ b/src/components/product card/index.scss
@@ -1,127 +1,129 @@
-.card{
+.card {
   border-radius: 5%;
   background-color: #BFBAAF;
 }
 
-.cov-card{
+.cov-card {
   border-radius: 5% 5% 0 0;
   width: 100%;
   height: 100%;
 }
 
-.ttl-cov-card{
+.ttl-cov-card {
   background-color: #BFBAAF;
   width: 40%;
-  height:30px;
+  height: 30px;
   top: calc(2%);
   text-align: center;
   position: absolute;
   border-radius: 0 15px 15px 0;
 }
 
-.desc-ttl-card{
+.desc-ttl-card {
   font-weight: 700;
   text-align: center;
 }
 
 
 
-@media only screen and (max-width:375px)  {
-  .card{
-    height: 120px;
-  }  
-  .ttl-cov-card{
+@media only screen and (max-width:375px) {
+  // .card {
+  //   height: 120px;
+  // }
+
+  .ttl-cov-card {
     height: 15px;
     border-radius: 0 5% 5% 0;
     width: 40% !important;
     font-size: 0.1rem !important;
   }
 
-  .desc-ttl-card{
+  .desc-ttl-card {
     font-size: 0.7rem !important;
   }
-
 }
 
-@media only screen and (min-width:425px)  {
-  .card{
-    height: 125px;
-  }  
-  .ttl-cov-card{
+@media only screen and (min-width:425px) {
+  // .card {
+  //   height: 125px;
+  // }
+
+  .ttl-cov-card {
     height: 15px;
     border-radius: 0 5% 5% 0;
     width: 40% !important;
     font-size: 0.1rem !important;
   }
 
-  .desc-ttl-card{
+  .desc-ttl-card {
     font-size: 0.7rem !important;
   }
-
 }
 
-@media only screen and (min-width:576px)  {
-  .card{
-    height: 120px;
-  }  
-  .ttl-cov-card{
+@media only screen and (min-width:576px) {
+  // .card {
+  //   height: 120px;
+  // }
+
+  .ttl-cov-card {
     height: 15px;
     border-radius: 0 5% 5% 0;
     width: 40% !important;
     font-size: 0.1rem !important;
   }
 
-  .desc-ttl-card{
+  .desc-ttl-card {
     font-size: 0.7rem !important;
   }
-
 }
 
-@media only screen and (min-width:768px)  {
-  .card{
-    height: 140px;
-  }  
-  .ttl-cov-card{
+@media only screen and (min-width:768px) {
+  // .card {
+  //   height: 140px;
+  // }
+
+  .ttl-cov-card {
     height: 15px;
     border-radius: 0 5% 5% 0;
     width: 40% !important;
     font-size: 0.1rem !important;
   }
 
-  .desc-ttl-card{
+  .desc-ttl-card {
     font-size: 0.7rem !important;
   }
-
 }
 
 @media only scrren and (min-with:992px) {
-  .card{
-    height: 240px;
-  }  
-  .ttl-cov-card{
+  // .card {
+  //   height: 240px;
+  // }
+
+  .ttl-cov-card {
     height: 15px;
     border-radius: 0 5% 5% 0;
     width: 40% !important;
     font-size: 0.7rem !important;
   }
 
-  .desc-ttl-card{
+  .desc-ttl-card {
     font-size: 0.7rem !important;
   }
 }
 
 @media only scrren and (min-with:1440px) {
-  .card{
-    height: 240px;
-  }  
-  .ttl-cov-card{
+  // .card {
+  //   height: 240px;
+  // }
+
+  .ttl-cov-card {
     height: 30px;
     border-radius: 0 5% 5% 0;
     width: 40% !important;
     font-size: 1rem !important;
   }
 
-  .desc-ttl-card{
+  .desc-ttl-card {
     font-size: 0.7rem !important;
   }
 }
