--- a/src/components/CS-card/index.scss
+++ b/src/components/CS-card/index.scss
@@ -4,79 +4,78 @@
   text-align:center; 
   font-weight:700;
   padding: 0 5% ;
-  background-color: #003082;
-  color:white;
+  background-color: #003082 !important;
+  color:white !important;
 }
 
 .btn-cs :hover{
   font-weight:700;
-  padding: 0 5% ;
-  width:80%;
+  width:100%;
   background-color: goldenrod;
   color:black
 }
 
 @media only screen and (max-width:375px) {
   .card-cs{
-    width: 65%;
     margin-bottom: 20px;
+    text-align: center;
   }
 
   .btn-cs{
     font-size:0.6rem;
   }
 }
-@media only screen and (max-width:425px) {
+@media only screen and (min-width:425px) {
   .card-cs{
-    width: 55%;
     margin-bottom: 20px;
   }
 
   .btn-cs{
     font-size:0.6rem;
+    text-align: center;
   }
 }
 
-@media only screen and (max-width:576px) {
+@media only screen and (min-width:576px) {
   .card-cs{
-    width: 50%;
     margin-bottom: 20px;
   }
 
   .btn-cs{
     font-size:0.6rem;
+    text-align: center;
   }
 }
 
-@media only screen and (max-width:768px) {
+@media only screen and (min-width:768px) {
   .card-cs{
-    width: 40%;
     margin-bottom: 20px;
   }
 
   .btn-cs{
     font-size:0.7rem;
+    text-align: center;
   }
 }
 
-@media only screen and (max-width:992px) {
+@media only screen and (min-width:992px) {
   .card-cs{
-    width: 35%;
     margin-bottom: 20px;
   }
 
   .btn-cs{
     font-size:0.8rem;
+    text-align: center;
   }
 }
 
-@media only screen and (max-width:1440px) {
+@media only screen and (min-width:1440px) {
   .card-cs{
-    width: 25%;
     margin-bottom: 20px;
   }
 
   .btn-cs{
     font-size:1rem;
+    text-align: center;
   }
 }
